// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumbs > renders correctly and matches snapshot 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumb Navigation"
  >
    <ol
      class="flex items-center gap-2 text-sm text-slate-700 dark:text-slate-200 gap-2"
    >
      <li
        class="flex items-center"
      >
        <a
          class="inline-flex items-center gap-1 transition-colors hover:text-primary focus:text-primary text-slate-700 dark:text-slate-200undefined"
          color="primary"
          href="/"
          tabindex="0"
        >
          <span
            class="mr-1 inline-flex"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-house"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
              />
              <path
                d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
            </svg>
          </span>
          Home
        </a>
      </li>
      <span
        aria-hidden="true"
        class="mx-1 text-slate-400 dark:text-slate-500 select-none"
      >
        /
      </span>
      <li
        class="flex items-center"
      >
        <a
          class="inline-flex items-center gap-1 transition-colors hover:text-primary focus:text-primary text-slate-700 dark:text-slate-200undefined"
          color="secondary"
          href="/applicant"
          tabindex="0"
        >
          <span
            class="mr-1 inline-flex"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-user"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="12"
                cy="7"
                r="4"
              />
            </svg>
          </span>
          Applicant
        </a>
      </li>
      <span
        aria-hidden="true"
        class="mx-1 text-slate-400 dark:text-slate-500 select-none"
      >
        /
      </span>
      <li
        class="flex items-center"
      >
        <a
          class="inline-flex items-center gap-1 transition-colors hover:text-primary focus:text-primary text-slate-700 dark:text-slate-200undefined"
          color="ghost"
          href="/applicant/123"
          tabindex="0"
        >
          Details
        </a>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs > renders correctly with impactful story 1`] = `
<DocumentFragment>
  <nav
    aria-label="Onboarding Progress"
  >
    <ol
      class="flex items-center gap-2 text-sm text-slate-700 dark:text-slate-200 gap-2"
    >
      <li
        class="flex items-center"
      >
        <a
          class="inline-flex items-center gap-1 transition-colors hover:text-primary focus:text-primary text-slate-700 dark:text-slate-200undefined"
          color="primary"
          href="/"
          tabindex="0"
        >
          <span
            class="mr-1 inline-flex"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-house"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
              />
              <path
                d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
              />
            </svg>
          </span>
          Home
        </a>
      </li>
      <span
        aria-hidden="true"
        class="mx-1 text-slate-400 dark:text-slate-500 select-none"
      >
        /
      </span>
      <li
        class="flex items-center"
      >
        <a
          class="inline-flex items-center gap-1 transition-colors hover:text-primary focus:text-primary text-slate-700 dark:text-slate-200undefined"
          color="success"
          href="/dashboard"
          tabindex="0"
        >
          Dashboard
        </a>
      </li>
      <span
        aria-hidden="true"
        class="mx-1 text-slate-400 dark:text-slate-500 select-none"
      >
        /
      </span>
      <li
        class="flex items-center"
      >
        <a
          class="inline-flex items-center gap-1 transition-colors hover:text-primary focus:text-primary text-slate-700 dark:text-slate-200undefined"
          color="warning"
          href="/dashboard/settings"
          tabindex="0"
        >
          Settings
        </a>
      </li>
      <span
        aria-hidden="true"
        class="mx-1 text-slate-400 dark:text-slate-500 select-none"
      >
        /
      </span>
      <li
        class="flex items-center"
      >
        <a
          class="inline-flex items-center gap-1 transition-colors hover:text-primary focus:text-primary text-slate-700 dark:text-slate-200undefined"
          color="danger"
          href="/dashboard/settings/profile"
          tabindex="0"
        >
          Profile
        </a>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;
